traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: value unary_! is not a member of Unit
  while (!estPosFin){
         ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:13: warning: enclosing method estPosFin has result type Unit: return value discarded
      return true
      ^Snake:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    case _ => return false
                     ^Snake:16: warning: enclosing method estPosFin has result type Unit: return value discarded
    case _ => return false
              ^